<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".ActivityGames">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        android:src="@drawable/bg1_0"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/games_layout">

        <ImageView
            android:id="@+id/logo"
            android:layout_height="0dp"
            android:layout_width="match_parent"
            android:layout_marginHorizontal="100dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.2"
            app:layout_constraintDimensionRatio="w, 1:4"
            app:srcCompat="@drawable/gates_font_1" />

        <Button
                android:text="@string/lesson"
                android:fontFamily="sans-serif-medium"
                android:textColor="#585858"
                android:background="@drawable/buttons"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:id="@+id/lesson"
                android:onClick="setLesson"
                app:layout_constraintTop_toBottomOf="@id/logo"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintVertical_bias="0.2"/>

        <Button
            android:layout_below="@id/lesson"
            android:background="@drawable/buttons"
            android:text="@string/game1"
            android:fontFamily="sans-serif-medium"
            android:textColor="#585858"
            android:padding="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/game1"
            android:onClick="setGame1"
            app:layout_constraintTop_toBottomOf="@id/lesson"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="0.1"/>

        <Button
            android:layout_below="@id/game1"
            android:background="@drawable/buttons"
            android:text="@string/game2"
            android:fontFamily="sans-serif-medium"
            android:textColor="#585858"
            android:padding="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/game2"
            android:onClick="setGame2"
            app:layout_constraintTop_toBottomOf="@id/lesson"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="0.3"/>

        <Button
            android:layout_below="@id/game2"
            android:background="@drawable/buttons"
            android:text="@string/game3"
            android:fontFamily="sans-serif-medium"
            android:textColor="#585858"
            android:padding="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/game3"
            android:onClick="setGame3"
            app:layout_constraintTop_toBottomOf="@id/lesson"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="0.5"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!--<RelativeLayout android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/buttons_difficulty">

        <TextView
            android:text="@string/lesson"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="150dp"
            android:textSize="32sp"
            android:id="@+id/game_name"/>

        <Button
            android:text="@string/novice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="250dp"
            android:id="@+id/novice"
            android:onClick="setNovice"/>

        <Button
            android:text="@string/intermediate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="350dp"
            android:id="@+id/intermediate"
            android:onClick="setIntermediate"/>

        <Button
            android:text="@string/advanced"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="450dp"
            android:id="@+id/advance"
            android:onClick="setAdvance"/>

    </RelativeLayout>-->

</androidx.constraintlayout.widget.ConstraintLayout>